Cherry-pick r267792. rdar://problem/69904383

REGRESSION (r265009): Web Share API can no longer be invoked if a previous invocation was dismissed using the close button
    https://bugs.webkit.org/show_bug.cgi?id=216913
    <rdar://problem/69659878>

    Reviewed by Darin Adler.

    No new tests; not able to test without UI tests that actually use UIActivityViewController.

    * UIProcess/Cocoa/WKShareSheet.mm:
    (-[WKShareSheet presentWithShareDataArray:inRect:]):
    -presentationControllerDidDismiss is not called if the UIActivityViewController is
    programmatically dismissed, so we need to revert to observing completion via
    UIActivityViewController's -completionWithItemsHandler.

    In order to avoid regressing bug 214894 by doing so, we also need to
    make sure that we're actually not presented anymore, as -completionWithItemsHandler
    can be called multiple times before the share sheet is actually dismissed.

    Canonical link: https://commits.webkit.org/229913@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267792 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.195@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@267910 268f45cc-cd09-0410-ab3c-d52691b4dbfc